; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_kmac_prov.c_kmac_new.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_kmac_prov.c_kmac_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kmac_data_st = type { i8*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.kmac_data_st* (i8*)* @kmac_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.kmac_data_st* @kmac_new(i8* %0) #0 {
  %2 = alloca %struct.kmac_data_st*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.kmac_data_st*, align 8
  store i8* %0, i8** %3, align 8
  %5 = call %struct.kmac_data_st* @OPENSSL_zalloc(i32 16)
  store %struct.kmac_data_st* %5, %struct.kmac_data_st** %4, align 8
  %6 = icmp eq %struct.kmac_data_st* %5, null
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = call i32* (...) @EVP_MD_CTX_new()
  %9 = load %struct.kmac_data_st*, %struct.kmac_data_st** %4, align 8
  %10 = getelementptr inbounds %struct.kmac_data_st, %struct.kmac_data_st* %9, i32 0, i32 1
  store i32* %8, i32** %10, align 8
  %11 = icmp eq i32* %8, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %7, %1
  %13 = load %struct.kmac_data_st*, %struct.kmac_data_st** %4, align 8
  %14 = call i32 @kmac_free(%struct.kmac_data_st* %13)
  store %struct.kmac_data_st* null, %struct.kmac_data_st** %2, align 8
  br label %20

15:                                               ; preds = %7
  %16 = load i8*, i8** %3, align 8
  %17 = load %struct.kmac_data_st*, %struct.kmac_data_st** %4, align 8
  %18 = getelementptr inbounds %struct.kmac_data_st, %struct.kmac_data_st* %17, i32 0, i32 0
  store i8* %16, i8** %18, align 8
  %19 = load %struct.kmac_data_st*, %struct.kmac_data_st** %4, align 8
  store %struct.kmac_data_st* %19, %struct.kmac_data_st** %2, align 8
  br label %20

20:                                               ; preds = %15, %12
  %21 = load %struct.kmac_data_st*, %struct.kmac_data_st** %2, align 8
  ret %struct.kmac_data_st* %21
}

declare dso_local %struct.kmac_data_st* @OPENSSL_zalloc(i32) #1

declare dso_local i32* @EVP_MD_CTX_new(...) #1

declare dso_local i32 @kmac_free(%struct.kmac_data_st*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
